--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     JS rocket
-    <script src="./js/00-main.js" defer></script>
+    <script src="./js/02-operations.js" defer></script>
+
     
 </body>
 </html>
