veiksmai su kintamaisiais

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     JS rocket
-    <script src="./js/01-variables.js" defer></script>
+    <script src="./js/02-operations.js" defer></script>
 
     
 </body>
