--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
     <title>JavaScript intro</title>
 </head>
 <body>
-    JS rocket
-    <script src="./js/02-operations.js" defer></script>
+    <div>JS rocket</div>
+    <script src="./js/03-strings.js" defer></script>
+<header><img src="#" alt="Logo">
+<nav>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
+    <a href="#">Link</a>
 
+</nav>
+
+</header>
     
+
 </body>
 </html>
