--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>JS rocket</div>
-    <script src="./js/03-strings.js" defer></script>
+    <script src="./js/04-if.js" defer></script>
 <header><img src="#" alt="Logo">
 <nav>
     <a href="#">Link</a>
