--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div>JS rocket</div>
-    <script src="./js/05-ternary.js" defer></script>
-<header><img src="#" alt="Logo">
+    <script src="./11-sum.js" defer></script>
+
+    <header><img src="#" alt="Logo">
 <nav>
     <a href="#">Link</a>
     <a href="#">Link</a>
