--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>JS rocket</div>
-    <script src="./11-sum.js" defer></script>
+    <script src="./12-rev.js" defer></script>
 
     <header><img src="#" alt="Logo">
 <nav>
