--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>JS rocket</div>
-    <script src="./16-multi.js" defer></script>
+    <script src="./17-bandomieji.js" defer></script>
 
     <header><img src="#" alt="Logo">
 <nav>
